--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="shortcut icon" href="1.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -46,7 +46,7 @@
                 Areebah Suhail
                 </h1>
                 <h6 class="text-white mb-5">
-                A <i>Data Scientist</i> in the making.
+                A <i>Data Science</i> and <i>Machine Learning</i> Enthusiast.
                 </h6>
             </div>
         </div>
